--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,10 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-
 PAGE_BASE_TITLE=Dana
 ORGANIZATION_NAME="Sallehuddin Industries"
+ORGANIZATION_SHORT="Sal Ind"
+ORGANIZATION_URL="https://www.sallehuddin.com"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
